[package]
name = "zentinel-agent-mqtt-gateway"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["Zentinel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/zentinelproxy/zentinel-agent-mqtt-gateway"
homepage = "https://zentinelproxy.io"
documentation = "https://zentinelproxy.io/docs/agents/mqtt-gateway"
description = "MQTT Gateway agent for Zentinel proxy - IoT protocol security with ACLs, auth, and payload inspection"
keywords = ["zentinel", "mqtt", "iot", "proxy", "agent"]
categories = ["network-programming"]
readme = "README.md"

[[bin]]
name = "zentinel-mqtt-agent"
path = "src/main.rs"

[lib]
name = "zentinel_agent_mqtt_gateway"
path = "src/lib.rs"

[dependencies]
# Zentinel protocol
zentinel-agent-protocol = "0.5"

# MQTT parsing
mqttrs = "0.4"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Data structures
dashmap = "6.1"
parking_lot = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Payload inspection
regex = "1"
jsonschema = "0.18"

# Base64 for payload decoding
base64 = "0.22"

# Command line
clap = { version = "4.5", features = ["derive", "env"] }

# Network
ipnet = "2.9"

[dev-dependencies]
tempfile = "3.12"
tokio-test = "0.4"
